--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "bootstrap": "^5.3.3",
     "react-bootstrap": "^2.10.5",
     "react-router-dom": "^6.27.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
