--- a/login/package.json
+++ b/login/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,11 +13,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^9.0.3",
+    "jwt-decode": "^4.0.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
