--- a/login/package.json
+++ b/login/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.8",
     "font-awesome": "^4.7.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
