--- a/login/package.json
+++ b/login/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.8",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
